Fixed the bug when all cards are stretched.

--- a/public/css/App.scss
+++ b/public/css/App.scss
@@ -206,6 +206,7 @@ nav > ul {
   // width: 90%;
   // margin: 3rem auto;
   flex-wrap: wrap;
+  align-items: flex-start;
   justify-content: center;
 }
 .card {
@@ -221,13 +222,14 @@ nav > ul {
     border-bottom-right-radius: 10px;
   }
 }
+
 .main{
   padding: 1rem 1.8rem;
   position: relative;
   display: flex;
-  align-items: flex-start;
 
   flex-direction: column;
+  
 }
 .name {
   font-size: 1.7rem;
@@ -236,6 +238,7 @@ nav > ul {
   // padding-top: 1.3rem;
   font-weight: bold;
   // font-family: var(--thirdFont);
+  display: block;
   font-family: 'Quicksand', sans-serif;
 
 }
@@ -245,6 +248,8 @@ nav > ul {
   font-size: 1.3rem;
   color: #4e4b66;
   font-family: "Segoe UI",var(--thirdFont);
+  display: block;
+  
 }
 .region,.currency{
   padding: 0.3rem 0.5rem;
@@ -254,7 +259,11 @@ nav > ul {
   font-family: 'Quicksand', sans-serif;
   margin-right: 0.5rem;
   margin-bottom: 1rem;
-  justify-self: flex-end;
+  
+}
+.currency{
+  background-color: lightgreen;
+  // color: white;
 }
 .allCountries-title{
   margin: 2rem 3rem;
@@ -263,5 +272,14 @@ nav > ul {
 }
 .tag-wrapper{
   display: flex;
+  height: 100%;
   flex-wrap: wrap;
+ 
+  // background-color: lightblue;
+}
+
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
